# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  DEVNET_PROOF.md  LOCALNET_PROOF.md  PROJECT_ROADMAP.md  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  package-lock.json  package.json
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md  architecture-diagram.mmd
examples/frontend/: README.md  app.js  index.html  styles.css
programs/stablecoin-core/: Cargo.toml
programs/stablecoin-core/src/: lib.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
scripts/: admin-tui.js  devnet-deploy.sh  frontend-preview.js  localnet-smoke.sh  submission-check.sh
services/: Dockerfile  common.js  compliance.js  indexer.js  mint-burn.js  webhook.js
src/: anchorArtifacts.js  index.js  keypair.js  onchainClient.js  presets.js  solanaStablecoin.js
test/: cli.test.js  onchain.integration.test.js  presets.test.js  sdk.test.js
